feat: Optimize deployment and fix template rendering

--- a/env.example
+++ b/env.example
@@ -3,6 +3,7 @@
 
 # Environment
 ENVIRONMENT=development  # development, testing, production
+DEBUG=False
 
 # API Configuration
 API_TITLE=GemStrategy API
@@ -23,22 +24,13 @@ MAX_RETRIES=3
 TIMEOUT_SECONDS=30
 USER_AGENT=GemStrategy/1.0
 
-# Database Configuration (for future use)
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=gemstrategy
-DB_USER=postgres
-DB_PASSWORD=
-DATABASE_URL=postgresql://user:password@localhost:5432/gemstrategy
+# ETF Configuration
+TICKERS='{}'
+BENCHMARK_TICKER=spy.us
+EQUITY_ETFS='[]'
+BOND_ETFS='[]'
 
-# Redis Configuration (for future use)
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_PASSWORD=
-REDIS_URL=redis://localhost:6379/0
-
-# Security Configuration (for future use)
+# Security Configuration
 SECRET_KEY=your-secret-key-here-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
